@@ -1,5 +1,6 @@
 == master
 
+* Fix initial states not getting set when the current value is an empty string [Aaron Gibralter]
 * Add rake tasks for generating graphviz files for state machines [Nate Murray]
 * Fix initial state not being included in list of known states
 * Add other_states directive for defining additional states not referenced in transitions or callbacks [Pete Forde]
